envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          \"@type\": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: http1
          stat_prefix: docusaurus_site
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - \"*\"
              routes:
              - match:
                  prefix: \"/terminal\"
                route:
                  cluster: terminal
                  upgrade_configs: 
                    - upgrade_type: "websocket"
              - match:
                  prefix: \"/exec\"
                route:
                  cluster: terminal
              - match:
                  prefix: \"/\"
                route:
                  cluster: docusaurus_site
                  upgrade_configs: 
                    - upgrade_type: "websocket"
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: docusaurus_site
    connect_timeout: 1.00s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: docusaurus
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 3000
                ipv4_compat: true
  - name: terminal
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: terminal
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ${TERMINAL_SERVER_IP}
                port_value: ${TERMINAL_SERVER_PORT}
admin:
  access_log_path: \"/dev/null\"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
